fix(toast): Hide scrollbars during animation.
During animation, certain browsers would show scroll bars if the
toast was positioned at the bottom of the parent container.

Fix by adding a class to the parent which sets the overflow to
hidden only during the animations.

Also, update documentation with notes about positioning and
recommendations.

Fixes #2936.

Closes #6017

--- a/src/components/toast/toast.scss
+++ b/src/components/toast/toast.scss
@@ -152,3 +152,9 @@ md-toast {
     border: 1px solid #fff;
   }
 }
+
+
+// While animating, set the toast parent's overflow to hidden so scrollbars do not appear
+.md-toast-animating {
+  overflow: hidden !important;
+}
